Refactor code; add checking of input parameters; add compilation of library; add eslint

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": ["es2015"],
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    "transform-runtime",
+    "transform-object-rest-spread",
+    "inline-json-import",
+    "transform-async-to-generator"
+  ]
 }
