--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "npm": "^3.10.10"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "npm run lint && npm run build && npm run minify",
+    "build": "./node_modules/.bin/babel ./lib --out-file ./dist/jibrel-contracts-jsapi.js",
+    "lint": "./node_modules/.bin/eslint ./lib",
+    "minify": "./node_modules/.bin/minify ./dist/jibrel-contracts-jsapi.js --mangle -o ./dist/jibrel-contracts-jsapi.min.js",
+    "test": "./node_modules/.bin/mocha --compilers babel-register"
   },
   "repository": {
     "type": "git",
@@ -22,12 +26,25 @@
   "homepage": "https://github.com/jibrelnetwork/jibrel-contracts-jsapi#readme",
   "devDependencies": {
     "babel-cli": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-minify": "0.2.0",
+    "babel-plugin-inline-json-import": "0.2.1",
+    "babel-plugin-transform-async-to-generator": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
-    "nodemon": "1.11.0"
+    "babel-register": "6.26.0",
+    "eslint": "4.5.0",
+    "eslint-config-airbnb-base": "11.3.1",
+    "eslint-plugin-import": "2.7.0",
+    "mocha": "3.5.0",
+    "should": "11.2.1"
   },
   "dependencies": {
-    "bluebird": "^3.5.0",
-    "web3": "0.20.0"
+    "bluebird": "3.5.0",
+    "crypto-js": "3.1.9-1",
+    "elliptic": "6.4.0",
+    "ethereumjs-tx": "1.3.3",
+    "web3": "0.20.1"
   }
 }
