--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "High level toolbox for solving typical tasks when creating a web wallet.",
   "main": "index.js",
   "engines": {
-    "node": "^6.10.0",
-    "npm": "^3.10.10"
+    "node": "^8.2.1",
+    "npm": "^5.3.0"
   },
   "scripts": {
     "compile": "npm run lint && npm run build && npm run minify",
-    "build": "./node_modules/.bin/babel ./lib --out-file ./dist/jibrel-contracts-jsapi.js",
+    "build": "./node_modules/.bin/webpack --config ./build/webpack.config.js",
     "lint": "./node_modules/.bin/eslint ./lib",
     "minify": "./node_modules/.bin/minify ./dist/jibrel-contracts-jsapi.js --mangle -o ./dist/jibrel-contracts-jsapi.min.js",
     "testrpc": "./node_modules/.bin/testrpc",
@@ -28,10 +28,15 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-eslint": "7.2.3",
+    "babel-loader": "7.1.2",
     "babel-minify": "0.2.0",
     "babel-plugin-inline-json-import": "0.2.1",
     "babel-plugin-transform-async-to-generator": "6.24.1",
+    "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
+    "babel-plugin-transform-es3-property-literals": "6.22.0",
+    "babel-plugin-transform-object-assign": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-proto-to-assign": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-register": "6.26.0",
@@ -40,7 +45,8 @@
     "eslint-plugin-import": "2.7.0",
     "ethereumjs-testrpc": "4.1.0",
     "mocha": "3.5.0",
-    "should": "11.2.1"
+    "should": "11.2.1",
+    "webpack": "3.5.5"
   },
   "dependencies": {
     "bluebird": "3.5.0",
