--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack": "3.5.5"
   },
   "dependencies": {
+    "bignumber.js": "2.0.7",
     "bluebird": "3.5.0",
     "crypto-js": "3.1.9-1",
     "elliptic": "6.4.0",
