--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "npm": "^5.3.0"
   },
   "scripts": {
-    "compile-standalone": "npm run build-standalone && npm run minify",
+    "compile:standalone": "npm run build:standalone && npm run minify",
     "compile": "npm run lint && npm run build",
-    "build": "./node_modules/.bin/babel -D -d ./lib ./src",
-    "build-standalone": "./node_modules/.bin/webpack --config ./build/webpack.config.js",
+    "clean": "rm -rf ./lib",
+    "build": "npm run clean && ./node_modules/.bin/babel -D -d ./lib ./src",
+    "build:standalone": "./node_modules/.bin/webpack --config ./build/webpack.config.js",
     "lint": "./node_modules/.bin/eslint ./src",
     "minify": "./node_modules/.bin/minify ./dist/jibrel-contracts-jsapi.js --mangle -o ./dist/jibrel-contracts-jsapi.min.js",
     "test": "./node_modules/.bin/mocha --compilers babel-register"
