--- a/package.json
+++ b/package.json
@@ -63,12 +63,12 @@
     "webpack": "3.5.5"
   },
   "dependencies": {
+    "@jibrelnetwork/web3": "0.20.6",
     "bignumber.js": "2.0.7",
     "bluebird": "3.5.0",
     "crypto-js": "3.1.9-1",
     "elliptic": "6.4.0",
     "ethereumjs-tx": "1.3.3",
-    "joi-browser": "10.6.1",
-    "web3": "0.20.1"
+    "joi-browser": "10.6.1"
   }
 }
