--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "crypto-js": "3.1.9-1",
     "elliptic": "6.4.0",
     "ethereumjs-tx": "1.3.3",
-    "joi-browser": "10.6.1"
+    "joi-browser": "10.6.1",
+    "request": "2.88.0",
+    "request-promise": "4.2.4"
   }
 }
